--- a/numberguess.html
+++ b/numberguess.html
@@ -1,68 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Number Guessing Game</title>
-
-	<style>
-		html {
-	font-family: sans-serif;
-	}
-	
-		body {
-	background-color: aqua;
-	width: 50%;
-	max-width: 800px;
-	min-width: 480px;
-	margin: 0 auto;
-	}
-	</style>
+    <title>Document</title>
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<h1>Guess The Number</h1>
+   <div class="container">
+       <h3>I am thinking of a number between 1-50.</h3>
+       <h3>Can you guess it?</h3>
 
-<p>We have selected a random number between 1 - 10.
-See if you can guess it.</p>
+       <input type="text" placeholder="Num" id="guess"><br>
+       <button onclick="play()" id="my_btn">GUESS</button>
 
-<div class="form">
-	<label for="guessField">Enter a guess: </label>
-	<input type = "text" id = "guessField" class = "guessField">
-	<input type = "submit" value = "Submit guess"
-		class = "guessSubmit" id = "submitguess">
-</div>
-
-<script type = "text/javascript">
-
-	// random value generated
-	var y = Math.floor(Math.random() * 10 + 1);
-	
-	// counting the number of guesses
-	// made for correct Guess
-	var guess = 1;
-	
-	document.getElementById("submitguess").onclick = function(){
-	
-// number guessed by user	
-var x = document.getElementById("guessField").value;
-
-if(x == y)
-{	
-	alert("CONGRATULATIONS!!! YOU GUESSED IT RIGHT IN "
-			+ guess + " GUESS ");
-}
-else if(x > y) /* if guessed number is greater
-				than actual number*/
-{	
-	guess++;
-	alert("OOPS SORRY!! TRY A SMALLER NUMBER");
-}
-else
-{
-	guess++;
-	alert("OOPS SORRY!! TRY A GREATER NUMBER")
-}
-}
-</script>
+       <p id="message1">No. Of Guesses: 0</p>
+       <p id="message2">Guessed Numbers are: None</p>
+       <p id="message3"></p>
+   </div>
+   <!--Script-->
+   <script src="script.js"></script>
 </body>
-</html>					
+</html>
