made this game more dynamic

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Number Guessing Game</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="container">
-       <h3>I am thinking of a number between 1-50.</h3>
+       <h3>I am thinking of a number between 1-<span id="range"></span>.</h3>
        <h3>Can you guess it?</h3>
 
        <input type="text" placeholder="Num" id="guess"><br>
